[gd_scene load_steps=31 format=2]

[ext_resource path="res://scripts/dialogue_system.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/HUD/rect_design.png" type="Texture" id=2]
[ext_resource path="res://assets/themes/fonts.tres" type="Theme" id=3]
[ext_resource path="res://assets/fonts/American Captain.otf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/sprites/ranks/zero.png" type="Texture" id=5]

[sub_resource type="DynamicFontData" id=9]
font_path = "res://assets/fonts/American Captain.otf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 9 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://assets/fonts/American Captain.otf"

[sub_resource type="DynamicFont" id=8]
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://assets/fonts/American Captain.otf"

[sub_resource type="DynamicFont" id=6]
size = 18
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/fonts/American Captain.otf"

[sub_resource type="DynamicFont" id=4]
font_data = SubResource( 3 )

[sub_resource type="Theme" id=22]
default_font = SubResource( 8 )
Button/fonts/font = SubResource( 2 )
CheckBox/fonts/font = SubResource( 8 )
CheckButton/colors/font_color = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_disabled = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_focus = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_hover = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_pressed = Color( 0, 0, 0, 1 )
CheckButton/constants/check_vadjust = 0
CheckButton/constants/hseparation = 0
CheckButton/fonts/font = SubResource( 8 )
CheckButton/icons/off = null
CheckButton/icons/off_disabled = null
CheckButton/icons/on = null
CheckButton/icons/on_disabled = null
CheckButton/styles/disabled = null
CheckButton/styles/focus = null
CheckButton/styles/hover = null
CheckButton/styles/hover_pressed = null
CheckButton/styles/normal = null
CheckButton/styles/pressed = null
ColorPickerButton/fonts/font = SubResource( 8 )
Fonts/fonts/large = SubResource( 8 )
Fonts/fonts/normal = SubResource( 6 )
GraphNode/fonts/title_font = SubResource( 8 )
ItemList/fonts/font = SubResource( 8 )
Label/fonts/font = SubResource( 4 )
LineEdit/fonts/font = SubResource( 8 )
LinkButton/fonts/font = SubResource( 8 )
MenuButton/fonts/font = SubResource( 8 )
OptionButton/fonts/font = SubResource( 8 )
PopupMenu/fonts/font = SubResource( 8 )
PopupMenu/fonts/font_separator = SubResource( 8 )
ProgressBar/fonts/font = SubResource( 8 )
RichTextLabel/fonts/bold_font = SubResource( 8 )
RichTextLabel/fonts/bold_italics_font = SubResource( 8 )
RichTextLabel/fonts/italics_font = SubResource( 8 )
RichTextLabel/fonts/mono_font = SubResource( 8 )
RichTextLabel/fonts/normal_font = SubResource( 8 )
TabContainer/fonts/font = SubResource( 8 )
Tabs/fonts/font = SubResource( 8 )
TextEdit/fonts/font = SubResource( 8 )
ToolButton/fonts/font = SubResource( 8 )
TooltipLabel/fonts/font = SubResource( 8 )
Tree/fonts/font = SubResource( 8 )
Tree/fonts/title_button_font = SubResource( 8 )
WindowDialog/fonts/title_font = SubResource( 8 )

[sub_resource type="DynamicFont" id=23]
size = 51
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=24]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=25]
resource_name = "continue"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=26]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=27]
resource_name = "continue"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="DynamicFont" id=1]
size = 66
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=10]
default_font = SubResource( 8 )
Button/fonts/font = SubResource( 2 )
CheckBox/fonts/font = SubResource( 8 )
CheckButton/colors/font_color = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_disabled = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_focus = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_hover = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_pressed = Color( 0, 0, 0, 1 )
CheckButton/constants/check_vadjust = 0
CheckButton/constants/hseparation = 0
CheckButton/fonts/font = SubResource( 8 )
CheckButton/icons/off = null
CheckButton/icons/off_disabled = null
CheckButton/icons/on = null
CheckButton/icons/on_disabled = null
CheckButton/styles/disabled = null
CheckButton/styles/focus = null
CheckButton/styles/hover = null
CheckButton/styles/hover_pressed = null
CheckButton/styles/normal = null
CheckButton/styles/pressed = null
ColorPickerButton/fonts/font = SubResource( 8 )
Fonts/fonts/large = SubResource( 8 )
Fonts/fonts/normal = SubResource( 6 )
GraphNode/fonts/title_font = SubResource( 8 )
ItemList/fonts/font = SubResource( 8 )
Label/fonts/font = SubResource( 4 )
LineEdit/fonts/font = SubResource( 8 )
LinkButton/fonts/font = SubResource( 8 )
MenuButton/fonts/font = SubResource( 8 )
OptionButton/fonts/font = SubResource( 8 )
PopupMenu/fonts/font = SubResource( 8 )
PopupMenu/fonts/font_separator = SubResource( 8 )
ProgressBar/fonts/font = SubResource( 8 )
RichTextLabel/fonts/bold_font = SubResource( 8 )
RichTextLabel/fonts/bold_italics_font = SubResource( 8 )
RichTextLabel/fonts/italics_font = SubResource( 8 )
RichTextLabel/fonts/mono_font = SubResource( 8 )
RichTextLabel/fonts/normal_font = SubResource( 8 )
TabContainer/fonts/font = SubResource( 8 )
Tabs/fonts/font = SubResource( 8 )
TextEdit/fonts/font = SubResource( 8 )
ToolButton/fonts/font = SubResource( 8 )
TooltipLabel/fonts/font = SubResource( 8 )
Tree/fonts/font = SubResource( 8 )
Tree/fonts/title_button_font = SubResource( 8 )
WindowDialog/fonts/title_font = SubResource( 8 )

[sub_resource type="DynamicFont" id=11]
size = 75
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=14]
default_font = SubResource( 8 )
Button/fonts/font = SubResource( 2 )
CheckBox/fonts/font = SubResource( 8 )
CheckButton/colors/font_color = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_disabled = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_focus = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_hover = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_pressed = Color( 0, 0, 0, 1 )
CheckButton/constants/check_vadjust = 0
CheckButton/constants/hseparation = 0
CheckButton/fonts/font = SubResource( 8 )
CheckButton/icons/off = null
CheckButton/icons/off_disabled = null
CheckButton/icons/on = null
CheckButton/icons/on_disabled = null
CheckButton/styles/disabled = null
CheckButton/styles/focus = null
CheckButton/styles/hover = null
CheckButton/styles/hover_pressed = null
CheckButton/styles/normal = null
CheckButton/styles/pressed = null
ColorPickerButton/fonts/font = SubResource( 8 )
Fonts/fonts/large = SubResource( 8 )
Fonts/fonts/normal = SubResource( 6 )
GraphNode/fonts/title_font = SubResource( 8 )
ItemList/fonts/font = SubResource( 8 )
Label/fonts/font = SubResource( 4 )
LineEdit/fonts/font = SubResource( 8 )
LinkButton/fonts/font = SubResource( 8 )
MenuButton/fonts/font = SubResource( 8 )
OptionButton/fonts/font = SubResource( 8 )
PopupMenu/fonts/font = SubResource( 8 )
PopupMenu/fonts/font_separator = SubResource( 8 )
ProgressBar/fonts/font = SubResource( 8 )
RichTextLabel/fonts/bold_font = SubResource( 8 )
RichTextLabel/fonts/bold_italics_font = SubResource( 8 )
RichTextLabel/fonts/italics_font = SubResource( 8 )
RichTextLabel/fonts/mono_font = SubResource( 8 )
RichTextLabel/fonts/normal_font = SubResource( 8 )
TabContainer/fonts/font = SubResource( 8 )
Tabs/fonts/font = SubResource( 8 )
TextEdit/fonts/font = SubResource( 8 )
ToolButton/fonts/font = SubResource( 8 )
TooltipLabel/fonts/font = SubResource( 8 )
Tree/fonts/font = SubResource( 8 )
Tree/fonts/title_button_font = SubResource( 8 )
WindowDialog/fonts/title_font = SubResource( 8 )

[sub_resource type="DynamicFont" id=15]
size = 90
outline_size = 4
outline_color = Color( 0.396078, 0.396078, 0.396078, 1 )
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=16]
default_font = SubResource( 8 )
Button/fonts/font = SubResource( 2 )
CheckBox/fonts/font = SubResource( 8 )
CheckButton/colors/font_color = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_disabled = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_focus = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_hover = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_pressed = Color( 0, 0, 0, 1 )
CheckButton/constants/check_vadjust = 0
CheckButton/constants/hseparation = 0
CheckButton/fonts/font = SubResource( 8 )
CheckButton/icons/off = null
CheckButton/icons/off_disabled = null
CheckButton/icons/on = null
CheckButton/icons/on_disabled = null
CheckButton/styles/disabled = null
CheckButton/styles/focus = null
CheckButton/styles/hover = null
CheckButton/styles/hover_pressed = null
CheckButton/styles/normal = null
CheckButton/styles/pressed = null
ColorPickerButton/fonts/font = SubResource( 8 )
Fonts/fonts/large = SubResource( 8 )
Fonts/fonts/normal = SubResource( 6 )
GraphNode/fonts/title_font = SubResource( 8 )
ItemList/fonts/font = SubResource( 8 )
Label/fonts/font = SubResource( 4 )
LineEdit/fonts/font = SubResource( 8 )
LinkButton/fonts/font = SubResource( 8 )
MenuButton/fonts/font = SubResource( 8 )
OptionButton/fonts/font = SubResource( 8 )
PopupMenu/fonts/font = SubResource( 8 )
PopupMenu/fonts/font_separator = SubResource( 8 )
ProgressBar/fonts/font = SubResource( 8 )
RichTextLabel/fonts/bold_font = SubResource( 8 )
RichTextLabel/fonts/bold_italics_font = SubResource( 8 )
RichTextLabel/fonts/italics_font = SubResource( 8 )
RichTextLabel/fonts/mono_font = SubResource( 8 )
RichTextLabel/fonts/normal_font = SubResource( 8 )
TabContainer/fonts/font = SubResource( 8 )
Tabs/fonts/font = SubResource( 8 )
TextEdit/fonts/font = SubResource( 8 )
ToolButton/fonts/font = SubResource( 8 )
TooltipLabel/fonts/font = SubResource( 8 )
Tree/fonts/font = SubResource( 8 )
Tree/fonts/title_button_font = SubResource( 8 )
WindowDialog/fonts/title_font = SubResource( 8 )

[sub_resource type="DynamicFont" id=17]
size = 120
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=18]
default_font = SubResource( 8 )
Button/fonts/font = SubResource( 2 )
CheckBox/fonts/font = SubResource( 8 )
CheckButton/colors/font_color = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_disabled = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_focus = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_hover = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_pressed = Color( 0, 0, 0, 1 )
CheckButton/constants/check_vadjust = 0
CheckButton/constants/hseparation = 0
CheckButton/fonts/font = SubResource( 8 )
CheckButton/icons/off = null
CheckButton/icons/off_disabled = null
CheckButton/icons/on = null
CheckButton/icons/on_disabled = null
CheckButton/styles/disabled = null
CheckButton/styles/focus = null
CheckButton/styles/hover = null
CheckButton/styles/hover_pressed = null
CheckButton/styles/normal = null
CheckButton/styles/pressed = null
ColorPickerButton/fonts/font = SubResource( 8 )
Fonts/fonts/large = SubResource( 8 )
Fonts/fonts/normal = SubResource( 6 )
GraphNode/fonts/title_font = SubResource( 8 )
ItemList/fonts/font = SubResource( 8 )
Label/fonts/font = SubResource( 4 )
LineEdit/fonts/font = SubResource( 8 )
LinkButton/fonts/font = SubResource( 8 )
MenuButton/fonts/font = SubResource( 8 )
OptionButton/fonts/font = SubResource( 8 )
PopupMenu/fonts/font = SubResource( 8 )
PopupMenu/fonts/font_separator = SubResource( 8 )
ProgressBar/fonts/font = SubResource( 8 )
RichTextLabel/fonts/bold_font = SubResource( 8 )
RichTextLabel/fonts/bold_italics_font = SubResource( 8 )
RichTextLabel/fonts/italics_font = SubResource( 8 )
RichTextLabel/fonts/mono_font = SubResource( 8 )
RichTextLabel/fonts/normal_font = SubResource( 8 )
TabContainer/fonts/font = SubResource( 8 )
Tabs/fonts/font = SubResource( 8 )
TextEdit/fonts/font = SubResource( 8 )
ToolButton/fonts/font = SubResource( 8 )
TooltipLabel/fonts/font = SubResource( 8 )
Tree/fonts/font = SubResource( 8 )
Tree/fonts/title_button_font = SubResource( 8 )
WindowDialog/fonts/title_font = SubResource( 8 )

[sub_resource type="DynamicFont" id=19]
size = 75
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=20]
default_font = SubResource( 8 )
Button/fonts/font = SubResource( 2 )
CheckBox/fonts/font = SubResource( 8 )
CheckButton/colors/font_color = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_disabled = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_focus = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_hover = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_pressed = Color( 0, 0, 0, 1 )
CheckButton/constants/check_vadjust = 0
CheckButton/constants/hseparation = 0
CheckButton/fonts/font = SubResource( 8 )
CheckButton/icons/off = null
CheckButton/icons/off_disabled = null
CheckButton/icons/on = null
CheckButton/icons/on_disabled = null
CheckButton/styles/disabled = null
CheckButton/styles/focus = null
CheckButton/styles/hover = null
CheckButton/styles/hover_pressed = null
CheckButton/styles/normal = null
CheckButton/styles/pressed = null
ColorPickerButton/fonts/font = SubResource( 8 )
Fonts/fonts/large = SubResource( 8 )
Fonts/fonts/normal = SubResource( 6 )
GraphNode/fonts/title_font = SubResource( 8 )
ItemList/fonts/font = SubResource( 8 )
Label/fonts/font = SubResource( 4 )
LineEdit/fonts/font = SubResource( 8 )
LinkButton/fonts/font = SubResource( 8 )
MenuButton/fonts/font = SubResource( 8 )
OptionButton/fonts/font = SubResource( 8 )
PopupMenu/fonts/font = SubResource( 8 )
PopupMenu/fonts/font_separator = SubResource( 8 )
ProgressBar/fonts/font = SubResource( 8 )
RichTextLabel/fonts/bold_font = SubResource( 8 )
RichTextLabel/fonts/bold_italics_font = SubResource( 8 )
RichTextLabel/fonts/italics_font = SubResource( 8 )
RichTextLabel/fonts/mono_font = SubResource( 8 )
RichTextLabel/fonts/normal_font = SubResource( 8 )
TabContainer/fonts/font = SubResource( 8 )
Tabs/fonts/font = SubResource( 8 )
TextEdit/fonts/font = SubResource( 8 )
ToolButton/fonts/font = SubResource( 8 )
TooltipLabel/fonts/font = SubResource( 8 )
Tree/fonts/font = SubResource( 8 )
Tree/fonts/title_button_font = SubResource( 8 )
WindowDialog/fonts/title_font = SubResource( 8 )

[sub_resource type="DynamicFont" id=21]
size = 90
outline_size = 4
outline_color = Color( 0.396078, 0.396078, 0.396078, 1 )
font_data = ExtResource( 4 )

[node name="dialogue_system" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="d_sys_out" type="TextureButton" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="d_sys_out"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -206.0
margin_top = -231.0
margin_right = 221.0
margin_bottom = -179.0
theme = SubResource( 22 )
custom_fonts/font = SubResource( 23 )
text = "Press [enter] to continue"
__meta__ = {
"_editor_description_": ""
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="d_sys_out"]
autoplay = "continue"
anims/RESET = SubResource( 24 )
anims/continue = SubResource( 25 )

[node name="d_sys_out_promo" type="TextureButton" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="d_sys_out_promo"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -206.0
margin_top = -231.0
margin_right = 221.0
margin_bottom = -179.0
theme = SubResource( 22 )
custom_fonts/font = SubResource( 23 )
text = "Press [enter] to continue"
__meta__ = {
"_editor_description_": ""
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="d_sys_out_promo"]
autoplay = "continue"
anims/RESET = SubResource( 26 )
anims/continue = SubResource( 27 )

[node name="rank_objective" type="PopupDialog" parent="."]
pause_mode = 2
self_modulate = Color( 0, 0.0313726, 0.133333, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -870.0
margin_top = -476.0
margin_right = 850.0
margin_bottom = 452.0

[node name="TextureRect" type="TextureRect" parent="rank_objective"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -820.0
margin_top = -420.0
margin_right = 820.0
margin_bottom = 420.0
texture = ExtResource( 2 )
expand = true

[node name="left_side" type="Control" parent="rank_objective/TextureRect"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -408.0
margin_right = 624.0
margin_bottom = 408.0

[node name="top_label" type="Label" parent="rank_objective/TextureRect/left_side"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 110.0
margin_top = 216.0
margin_right = 225.0
margin_bottom = 283.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "RANK"

[node name="rank_icon" type="TextureRect" parent="rank_objective/TextureRect/left_side"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 54.0
margin_top = -112.0
margin_right = 286.0
margin_bottom = 80.0
texture = ExtResource( 5 )
expand = true

[node name="rank_name" type="Label" parent="rank_objective/TextureRect/left_side"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 86.0
margin_top = 520.0
margin_right = 256.0
margin_bottom = 596.0
theme = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
text = "{RANK}"
align = 1

[node name="right_side" type="Control" parent="rank_objective/TextureRect"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -848.0
margin_top = -408.0
margin_bottom = 408.0

[node name="top_label" type="Label" parent="rank_objective/TextureRect/right_side"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -302.0
margin_top = 144.0
margin_right = -7.0
margin_bottom = 211.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "YOUR MISSION"

[node name="objectives" type="Label" parent="rank_objective/TextureRect/right_side"]
anchor_left = 0.0566038
anchor_top = 0.264706
anchor_right = 0.311321
anchor_bottom = 0.328431
theme = SubResource( 22 )
custom_fonts/font = SubResource( 23 )
text = "{OBJECTIVES}"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="begin" type="Label" parent="rank_objective/TextureRect/right_side"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -120.0
margin_top = -128.0
margin_right = 103.0
margin_bottom = -37.0
theme = SubResource( 14 )
custom_fonts/font = SubResource( 15 )
text = "[ BEGIN ]"

[node name="promotion" type="PopupDialog" parent="."]
pause_mode = 2
self_modulate = Color( 0, 0.0313726, 0.133333, 0.752941 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -870.0
margin_top = -476.0
margin_right = 850.0
margin_bottom = 452.0

[node name="TextureRect" type="TextureRect" parent="promotion"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -820.0
margin_top = -420.0
margin_right = 820.0
margin_bottom = 420.0
texture = ExtResource( 2 )
expand = true

[node name="center" type="Control" parent="promotion/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -312.0
margin_top = -408.0
margin_right = 312.0
margin_bottom = 408.0

[node name="top_label" type="Label" parent="promotion/TextureRect/center"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -220.5
margin_top = 72.0
margin_right = 220.5
margin_bottom = 192.0
theme = SubResource( 16 )
custom_fonts/font = SubResource( 17 )
text = "PROMOTION"

[node name="rank_icon" type="TextureRect" parent="promotion/TextureRect/center"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -72.0
margin_right = 120.0
margin_bottom = 120.0
texture = ExtResource( 5 )
expand = true

[node name="rank_name" type="Label" parent="promotion/TextureRect/center"]
anchor_left = 0.378205
anchor_top = 0.637255
anchor_right = 0.650641
anchor_bottom = 0.730392
margin_left = 1.52588e-05
margin_top = 40.0
margin_bottom = 40.0002
theme = SubResource( 18 )
custom_fonts/font = SubResource( 19 )
text = "{RANK}"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="accept" type="Label" parent="promotion/TextureRect/center"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -132.0
margin_top = -112.0
margin_right = 154.0
margin_bottom = -21.0
theme = SubResource( 20 )
custom_fonts/font = SubResource( 21 )
text = "[  ACCEPT  ]"

[connection signal="pressed" from="d_sys_out" to="." method="_on_d_sys_out_pressed"]
[connection signal="pressed" from="d_sys_out_promo" to="." method="_on_d_sys_out_promo_pressed"]
